web/css/icub-mcm.css
#brand.v2013, .creative-commons, .accesimapa, .finalpeu, .options, .social, .language-selector, #brand.v2013 .brand-wrapper .navigation ul.options .more ul {
    -moz-box-sizing: content-box;
    -webkit-box-sizing: content-box;
    box-sizing: content-box;
}

html, body, p {
    font-family: 'AvenirNext','Lato',Arial,Helvetica,sans-serif;
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
	font-family: 'AvenirNext','Lato',Arial,Helvetica,sans-serif;
}

a:focus {
  outline: none;
}

.gallery {
	padding: 10px 0;
}

.gallery .item {
	border: 1px solid #CCCCCC;
	box-shadow: 2px 2px 4px #CCCCCC;
	padding: 10px;
	text-align: center;
	/*
	background-image: url("../img/white.png"), url("http://hdl.handle.net/10970/media/e220e137-be87-4827-bb88-71987444eaca");
	background-position: center center, center center;
	background-repeat: repeat, no-repeat;
	background-size: contain, contain;
	*/
}

.gallery .item:hover {
    background-color: #EEEEEE;
    cursor: pointer;
}

.gallery .item h4 {
    padding: 0px;
    font-weight: bold;
    text-transform: uppercase;
}

.gallery .item div {
    padding-bottom: 3px;
}

.gallery .item img {
    display: block;
    height: auto;
    max-height: 150px;
    max-width: 100%;
    margin-right: auto;
    margin-left: auto;
}

#detail button.close {
	padding: 12px;
}

.content-peca {
	width: 100%;
}

.content-peca .content-pecagran {
	width: 50%;
	margin: 0;
}

.content-peca .content-infopeca {
    float: left;
    padding-left: 24px;
    width: 50%;
}

.content-peca .titoldescpeca, .content-peca .descpeca {
	width: inherit;
}

.content-peca .descpeca {
	padding: 24px;
}

.img-detail {
	top: 0;
	max-width: 477px !important;
	max-height: 450px !important;
	display: block;
    margin-left: auto;
    margin-right: auto;
}

#carousel-detail {
	width: 477px !important;
	height: 450px !important;
}

.content-peca .next {
    height: auto;
    position: absolute;
    right: 0;
    top: 0;
    width: 100%;
}

.content-peca .content-pecagran {
    cursor: default;
}

.carousel-control.left, .carousel-control.right {
	background-image: none;
}

.container {
  width: 100% !important;
}

#autors_i_adreces_comunes {
	display: none;
}

#sidebar-left, .row.margin {
	padding-top: 24px;
}

button {
	font-family: Arial,Helvetica,sans-serif;
}

#tree {
	padding-top: 24px;
    font-size: 20px;
}

#tree button {
	font-family: 'AvenirNext','Lato',Arial,Helvetica,sans-serif;
	color: #707070;
	border-radius: 0;
	background-color: transparent;
	border: none;
	box-shadow: none;
}

#tree .btn-group:hover {
	background-color: #DDDDDD;
}

#tree button.active,
#tree .open button {
	background-color: #FFFFFF;
}

#tree button.continent {
	width: 179px;
	text-align: left;
	font-size: 18px;
	padding: 10px;
}

#tree button.dropdown {
	font-size: 18px;
	padding: 10px;
}

.nav-pills > li.active > button, .nav-pills > li.active > button:hover, .nav-pills > li.active > button:focus {
    background-color: #FFFFFF;
    color: #707070;
}

.nav > li > button:hover,
.nav > li > button:focus {
  text-decoration: none;
  background-color: #DDDDDD;
  color: #707070;
}

.nav-pills > li > button {
    border-radius: 0;
}

/* right-arrow */
#tree .btn-group:not(.open) > button > .caret {
    border-top: 4px solid rgba(0, 0, 0, 0);
    border-bottom: 4px solid rgba(0, 0, 0, 0);
    border-left: 4px solid;
    display: inline-block;
    height: 0;
    margin-left: 2px;
    vertical-align: middle;
    width: 0;
}

/* left-arrow */
#tree .btn-group.open > button > .caret {
    border-top: 4px solid rgba(0, 0, 0, 0);
    border-bottom: 4px solid rgba(0, 0, 0, 0);
    border-right: 4px solid;
    display: inline-block;
    height: 0;
    margin-left: 2px;
    vertical-align: middle;
    width: 0;
}

.right-menu {
	left: 100%;
	top: -2px;
	width: 700px;
	border-radius: 0;
	box-shadow: 0;
	padding: 10px;
	border: none;
	box-shadow: none;
}

.two-column-menu {
	width: 50%;
	float: left;
}

.three-column-menu {
	width: 33.3%;
	float: left;
}

.two-column-paragraph {
	column-count: 2;
	column-gap: 48px;
	-moz-column-count: 2;
	-moz-column-gap: 48px;
	-webkit-column-count: 2;
	-webkit-column-gap: 48px;
	text-align: justify;
}

#description, #gallery, #advanced-search-container {
	margin-bottom: 24px;
	padding: 20px;
	background: #FFFFFF;
}

#map {
    margin-bottom: 24px;
}

#advanced-search-container {
	display: none;		
}

.container, .navbar-collapse {
    padding-left: 0;
    padding-right: 0;
}

h2 {
	text-transform: uppercase;
}

.africa {
	color: rgb(235, 98, 9);
}

.america {
	color: rgb(102, 61, 0);
}

.asia {
	color: rgb(161, 29, 33);
}

.oceania {
	color: rgb(0, 155, 162);
}

@media (min-width: 1200px) {
  a#main-menu-toggle {
    margin-left: 25%;
  }
  a.navbar-brand {
    width: 25%;
  }
  .container #content {
    width: 75%;
  }
  .container #sidebar-left {
    width: 25%;
  }
}
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  a#main-menu-toggle {
    margin-left: 25%;
  }
  a.navbar-brand {
    width: 25%;
  }
  .container #content {
    width: 75%;
  }
  .container #sidebar-left {
    width: 25%;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  a#main-menu-toggle {
    margin-left: 25%;
  }
  a.navbar-brand {
    width: 25%;
  }
  .container #content {
  	width: 75%;
  }
  .container #sidebar-left {
    width: 25% !important;
  }
  .nav {
    padding-left: 10px;
  }
}
@media only screen and (max-width: 767px) {
  .navbar {
    background: none;
  }
  .navbar-collapse {
    max-height: 320px;
  }
  .container > .row > #content {
    overflow: hidden;
  }
}

.navbar-toggle {
    top: -3px;
}

#museums .btn, #fields .btn {
	white-space: normal;
}

.fa-cel-museum:before {
  content: "\f015";
}
.fa-cel-collection:before {
  content: "\f00a";
}
.fa-cel-none:before {
  content: "\f05e";
}
.fa-cel-author:before {
  content: "\f007";
}
.fa-cel-culture:before {
  content: "\f0c0";
}
.fa-cel-material:before {
  content: "\f000";
}
.fa-cel-objectName:before {
  content: "\f02b";
}
.fa-cel-place:before {
  content: "\f0ac";
}
.fa-cel-technique:before {
  content: "\f0ad";
}
.fa-cel-gallery:before {
  content: "\f03e";
}
.fa-cel-object:before {
  content: "\f091";
}

#login_form input[type="text"], #login_form input[type="password"] {
    background: none repeat scroll 0 0 #E4E6EB;
    border: 0 none;
    border-radius: 2px;
    box-shadow: none;
    height: 40px;
    margin: 5px auto;
    padding: 0 10px;
}

#map {
    height: 480px;
}

.leaflet-top, .leaflet-bottom {
    z-index: 999;
}

.mcm-hide-marker {
	border: 0;
}

#timeline > div {
    margin-left: auto;
    margin-right: auto;
    border-radius: 5px;
    box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
    border: 1px solid #bbb;
}

img.tiny {
	max-height: 32px;
	border: 1px solid #666666;
	border-radius: 3px;
}

.marker-out {
    display: inline-block;
    font-weight: normal;
    margin-bottom: 0;
    text-align: center;
    vertical-align: middle;	
}

.marker-out img {
	margin: 3px;
}

.marker-out span {
    font-size: 12px;
    line-height: 1.5;
    padding: 1px 5px;
    -moz-user-select: none;
    cursor: pointer;
    background-color: #428BCA;
    border: 1px solid #357EBD;
    color: #FFFFFF;
	border-radius: 3px;	
}

.cluster-out span {
    background-color: #D9534F;
    border-color: #D43F3A;
}

.marker {
    background-color: #428BCA;
    border: 1px solid #357EBD;
    color: #FFFFFF;
	border-radius: 3px;
    font-size: 12px;
    line-height: 1.5;
    padding: 1px 5px;
    -moz-user-select: none;
    cursor: pointer;
    display: inline-block;
    font-weight: normal;
    margin-bottom: 0;
    text-align: center;
    vertical-align: middle;
}

.cluster {
    background-color: #D9534F;
    border-color: #D43F3A;
}

.marker.marker-selected, .marker-out.marker-selected span {
    background-color: #5CB85C;
    border-color: #4CAE4C;
}

.descripcio_peca {
    padding: 24px;
}

.descripcio_peca dt {
	margin-bottom: 6px;
}

.descripcio_peca dd {
	display: block;
	padding-bottom: 24px;
	margin-left: 24px;
	text-align: justify;
}

.circle {
    width: 15px;
    height: 15px;
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    border-radius: 50%;
    border: 1px solid rgb(170, 136, 0);
    background-color: rgba(170, 136, 0, 0.5);
}

.blur {
	filter: blur(3px); /* Standard */
	-webkit-filter: blur(3px); /* Webkit */
	-moz-filter: blur(3px);
	-o-filter: blur(3px); 
	-ms-filter: blur(3px);
	filter: url(blur.svg#blur); /* Firefox */
	filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='3'); /* < IE9 */
}

